syntax = "proto3";

message RaidBoss {
  string boss_name = 1;
  int32 level = 2;
  string image = 3;
  string language = 4;
}