syntax = "proto3";

message RaidTweet {
  uint64 tweet_id = 1;
  string screen_name = 2;
  string boss_name = 3;
  string raid_id = 4;
  string text = 5;
  uint64 created = 6;
  string language = 7;
  string profile_image = 8;
}